--- a/GEO 103.md
+++ b/GEO 103.md
@@ -1411,6 +1411,7 @@ Horses:
 	* H2 (mostly lost to space), N2, CO, S, CI, etc
 * current N2-rich atmosphere due to "loss" of CO2 into sedimentary rocks
 * e.g., CaO + CO2 -> sedimentary rocks
+![[Pasted image 20230306092343.png]]
 
 ### Atmospheric Evolution
 * volcanic gases lack free oxygen (& ozone)
@@ -1437,3 +1438,143 @@ Horses:
 	- included are chemical precipitates and turbdites
 	- size of oceans not known but likely formed at a rate faster than continents formed
 	- water still outgassed but much volcanic water vapor is recycled surface water
+
+### Origin of Life
+* biosphere contains millions of species of:
+	* bacteria
+	* fungi
+	* protistans
+	* plants
+	* animals
+* *only* fossil bacteria have been found in Archean
+* fossil record dates to 3.3 - 3.5 Gyr
+* carbon isotope ratios in 3.85 Gyr rocks in Greenland consistent with metabolic processes
+* fundamental question is how life arose from non-living material - **abiogenesis**
+* must be a **prebiotic stage** - showing processes similar to life but not living
+* widely agreed that life originated in absence of free oxygen - severely damages most primitive organisms (most bacteria)
+
+### What is Life?
+- living organism must:
+	- reproduce (for long term survival)
+	- practice metabolism (short term survival)
+- distinction between living/non-living
+	- e.g., are viruses living?
+	- when in host cell behave like living organisms
+	- but neither reproduce nor metabolize
+- simple organic molecules => **microspheres**
+	- form simultaneously
+	- show organizational complexity
+	- can grow and divide
+	- processes are random chemical reactions
+	- not living
+
+#### Requirements for Life
+* orgin of life has 2 requirements
+	* source of elements for organic molecules
+	* energy sources for chemical reactions
+* all organisms are composed of **C, H, N, O**
+* all of which were present in early atmosphere
+	1. carbon dioxide ($CO_2$)
+	2. water vapor ($H_2O$)
+	3. nitrogen ($N_2$)
+	4. possile methane ($CH_4$) and ammonia ($NH_3$)
+- energy from lightning & UV radiation promoted early chemical reactions
+	- formation of monomers - simple organic molecules such as amino acids
+- hydrothermal vents may also be energy source
+
+### Experiment on Origin of Life
+* Miller-Urey experiment
+	* simulated lightening into highly reducing atmosphere
+	* demonstrated formation of monomers (amino acids) by abiological proccesses
+	* now kow that such an atmosphere is implausible -- too reducing
+	* other experiements have synthesized all 20 amino acids found in organisms
+
+### Monomers to Polymers
+* molecules of organisms => polyers such as
+	* proteins
+	* nucleic acids, RNA and DNA
+	* monomers linked together in specific sequence
+* polymerization
+	* water usually causes depolymerization
+* synthesize molecules known as **proteinoids**
+	* heating dehydrated concentrated amino acids
+	* form more than 200 linked amino acids
+	* no outer protective membrane
+
+#### Proteinoid Microspheres
+* ![[Pasted image 20230306093047.png]]
+
+#### Next Critical Step
+* development of reproductive mecahnism not understood
+	* nucleic acids - either RNA or DNA - necessary for reproduction
+	* nucleic acids cannot replicate without protein enyzmes and vice versa
+* discovery that small RNA molecules can replicate without aid of protein enzymes
+	* first replicating systems may be RNA molecules
+	* perhaps an early "RNA world"
+	* how RNA was synthesized remains a problem
+* orgin of life remains poorly understood
+
+### Oldest Known Organisms
+* Charles Walcott described structures from Early Proterozoic Gunflint Iron Formation, Canada proposed to represent reefs constructed by algae
+* now called stromatolites
+* recgonized as biological only in 1954
+* sediment trapped on mats of cyanobacteria ![[Pasted image 20230306093358.png]]
+> Modern stramatolites Shark Bay, Australia
+
+### Stromatolites
+* diff. types of stromatolites:
+	* irregular mats, columns, and columns linked by mats
+	* ![[Pasted image 20230306093539.png]]
+
+##### Fossil Stromatolites
+* stromatolites forms => sediment grains are trapped on mats of photosynthesizing cyanobacteria (blue - green - algae)
+	* today: restricted to environments where snails cannot live
+* fossil stromatolites very common especially in Precambrian - no grazing animals
+* oldest known undisputed stromatolites found in rocks in **3.0 Gyr rocks in South Africa**
+	* probable ones also known in 3.3-3.5 Gyr Warrawoona Group in Australia
+
+### Other Evidence of Early Life
+* Carbon isotopes in 3.85 Gyr rocks in Greenland consistent with life
+	* could also be metamorphic effect
+* oldest known cyanobacteria was photosynthesizing but photosynthesis is complex metabolic process
+* simpler type of metabolish should have preceded it
+* no fossils are known of these earliest organisms (maybe)
+
+### Is this a stromatolite?
+![[Pasted image 20230306094023.png]]
+* probably not
+
+### Earliest Organisms
+* resembled **anaerobic** bacteria
+* **heterotrophic**
+	* depended on an external source of nutrients
+	* *autotrophic* organisms make their own nutrients in photosynthesis
+* had **prokaryotic** cells
+	* lacked cell nucleus
+	* lacked other internal cell structures typical of **eukaryotic cells** 
+* anaerobic, heterotrophic prokayrotes could use **adenosine triphosphate (ATP)** as nutrient source
+	* drives energy-related cell reactions
+	* can be synthesized from simple gases & phosphate
+
+### Nutrients for Early Cells
+* organisms => sophisticated metabolism - fermentation
+* **fermentation** used by most living prokaryotes
+	* anaerobic process
+	* molecules, such as sugars, split releasing carbon dioxide, alcohol, and energy
+* critical event in Archean was development of autotrophic process of **photosynthesis**
+	* as early as 3.5 Gyr
+	* early prokarytoes cells still anaerobic
+	* as autotrophs, no longer dependent on prefromed organic molecules as a source of nutrients
+* anaerobic, autotrophic prokaryotes belong to the Kingdom Monera
+	* represented today by bacteria and cyanobacteria
+
+#### Fossil Prokaryotes
+![[Pasted image 20230306094653.png]]
+- photomicropgraphs from western Australia's 3.3-3.5 Gyr Warrawoona Group
+	- schematic restoration shown at the right of each
+
+#### Archean Mineral Resources
+![[Pasted image 20230306094746.png]]
+- Archean rocks notably rich in mineral deposits
+	- massive sulfide deposits important hosts of copper, zinc, nickel, lead, gold, silver
+	- other important deposits include gold, chromium, platinum, and iron
