--- a/daily/2023-03-02.md
+++ b/daily/2023-03-02.md
@@ -15,14 +15,14 @@ modification date: <%+ tp.file.last_modified_date("dddd Do MMMM YYYY hh:mm:ss") 
 
 ```tasks
 not done
-due before <% tp.date.now("YYYY-MM-DD") %>
+due before 2023-03-06
 ```
 
 #### Due Today
 
 ```tasks
 not done
-due on <% tp.date.now("YYYY-MM-DD") %>
+due on 2023-03-06
 ```
 
 #### New Today
@@ -69,5 +69,5 @@ no due date
 #### Done Today
 
 ```tasks
-done on <% tp.date.now("YYYY-MM-DD") %>
+done on 2023-03-06
 ```
