--- a/GEO 103.md
+++ b/GEO 103.md
@@ -1532,6 +1532,8 @@ Horses:
 * fossil stromatolites very common especially in Precambrian - no grazing animals
 * oldest known undisputed stromatolites found in rocks in **3.0 Gyr rocks in South Africa**
 	* probable ones also known in 3.3-3.5 Gyr Warrawoona Group in Australia
+![[Pasted image 20230306100642.png]]
+
 
 ### Other Evidence of Early Life
 * Carbon isotopes in 3.85 Gyr rocks in Greenland consistent with life
